# nitpickers2

./: .env.example  .gitignore  README.md  diff.patch  docker-compose.yml  fix_lint2.py  fix_lint3.py  fix_lint4.py  fix_lint5.py  fix_lint7.py  fix_lint8.py  fix_lint9.py  output.txt  pyproject.toml  test_auto_pr.txt
.github/workflows/: ci.yml
dev_documents/: ALL_SPEC.md  USER_TEST_SCENARIO.md  test_execution_log.txt
dev_documents/system_prompts/: ARCHITECT_CRITIC_INSTRUCTION.md  ARCHITECT_INSTRUCTION.md  AUDITOR_INSTRUCTION.md  AUDIT_FEEDBACK_INJECTION.md  AUDIT_FEEDBACK_MESSAGE.md  CODER_CRITIC_INSTRUCTION.md  CODER_INSTRUCTION.md  FINAL_CODER_CRITIC_INSTRUCTION.md  FINAL_REFACTOR_AUDITOR_INSTRUCTION.md  FINAL_REFACTOR_INSTRUCTION.md  MANAGER_INQUIRY_FALLBACK.md  MANAGER_INQUIRY_FOLLOWUP.md  MANAGER_INQUIRY_PROMPT.md  MANAGER_INSTRUCTION.md  PLAN_AUDITOR_ARCHITECT.md  PLAN_AUDITOR_SYSTEM.md  PLAN_REVIEW_PROMPT.md  POST_AUDIT_REFACTOR_INSTRUCTION.md  PR_CREATION_REQUEST.md  QA_AUDITOR_INSTRUCTION.md  QA_TUTORIAL_INSTRUCTION.md  RCA_INSTRUCTION.md  REFACTOR_AUDITOR_INSTRUCTION.md  REFACTOR_INSTRUCTION.md  SANDBOX_FAILURE_MESSAGE.md  UAT_AUDITOR_INSTRUCTION.md  UAT_DESIGN.md  UX_AUDITOR_INSTRUCTION.md
plans/: current-architecture.md  depth-complexity-analysis.md  file-consolidation-plan.md  flow-complexity-analysis.md  handover.md  jules-cleanup-analysis.md  jules-mcp-architecture.md  p1-git-consolidation-plan.md  workflow-split-plan.md
src/: agents.py  cli.py  config.py  enums.py  graph.py  graph_nodes.py  jules_session_nodes.py  jules_session_state.py  process_runner.py  sandbox.py  service_container.py  state.py  state_manager.py  utils.py  utils_json.py
src/domain_models/: __init__.py  config.py  manifest.py  models.py
src/nodes/: __init__.py  architect.py  coder.py  coder_critic.py  critic_nodes.py  fixer_nodes.py  routers.py  sandbox_evaluator.py  state_machine.py
src/services/: async_dispatcher.py  audit_orchestrator.py  auditor_usecase.py  base_jules_usecase.py  coder_usecase.py  committee_usecase.py  conflict_manager.py  critic_usecase.py  diagnostics.py  environment_validator.py  feedback_fix.py  git_ops.py  initial_coder.py  integration_usecase.py  jules_client.py  llm_reviewer.py  plan_auditor.py  post_mortem.py  qa_usecase.py  rca_service.py  refactor_usecase.py  self_critic_evaluator.py  tracing.py  uat_usecase.py  ux_auditor_usecase.py  workflow.py  workflow_archive.py  workflow_cycle.py  workflow_failure.py  workflow_orchestrator.py  workflow_quality.py  workflow_session.py
src/templates/: ARCHITECT_INSTRUCTION.md  AUDIT_FEEDBACK_INJECTION.md  CODER_INSTRUCTION.md  PLAN_AUDITOR_CODER.md  RCA_SYSTEM.md
tests/e2e/: test_architect_graph.py  test_coder_graph.py  test_integration_graph.py  test_qa_graph.py
tests/integration/: test_coder_graph.py  test_coder_pipeline_flow.py  test_git_robustness.py  test_integration_graph.py  test_pipeline_orchestration.py  (+2 more)
(+69 files in other folders)
