[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nitpickers"
version = "0.1.0"
description = "AI-Native Code Development Environment with Red Teaming (Nitpickers)."
readme = "README.md"
authors = [
    { name = "tomoyuki tsuyama", email = "tomoyuki.tsuyaman@gmail.com" },
]
requires-python = ">=3.12, <3.14"
dependencies = [
    "pydantic>=2.10.0,<2.12.0",
    "python-dotenv",
    "pydantic-settings",
    "pydantic-ai>=0.0.18",
    "langchain-core>=0.3.36",
    "langchain>=0.3.19",
    "langgraph>=1.0.5",
    "e2b-code-interpreter>=2.4.1",
    "httpx[http2]>=0.28.1",
    "google-auth>=2.43.0",
    "litellm>=1.80.11",
    "typer",
    "rich",
    "mypy>=1.19.0",
    "pydantic-ai-slim[anthropic]>=0.0.18",
    "anthropic>=0.86.0",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[project.scripts]
nitpick = "src.cli:app"

[dependency-groups]
dev = [
    "shellingham",
    "pytest",
    "pytest-cov",
    "hypothesis",
    "playwright",
    "vcrpy",
    "ruff",
    "google-genai",
    "mypy",
    "bandit",
    "types-PyYAML",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.5.1",
    "marimo>=0.10.14",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pytest-playwright>=0.7.2",
    "respx>=0.22.0",
    "pyfakefs>=6.1.6",
    "pytest-httpserver>=1.1.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "I", "N", "UP", "YTT", "ANN", "ASYNC", "S", "BLE",
    "B", "A", "C4", "DTZ", "T10", "EM", "ICN", "PIE", "T20", "PT", "RET",
    "SIM", "TID", "ARG", "PTH", "ERA", "PL", "TRY", "RUF"
]

ignore = [
    "ANN002", "ANN003", "ANN001", "ANN401", "ARG001", "ARG005",
    "PLR2004", "E501", "TRY003", "D", "ANN201", "N806", "PLC0415", "BLE001",
    "PT019", "RUF003", "ARG002", "PLR0913", "ANN202", "S603", "ERA001", "A003", "PLR0912"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ASYNC221", "ASYNC109"]  # Allow assert and sync subprocess in tests

[tool.ruff.lint.mccabe]
max-complexity = 10  # Exceeding this prompts function splitting (prevent AI long functions)

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true  # Arguments starting with _ do not require type hints

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"time.sleep".msg = "Use Playwright auto-waiting instead"

[tool.pytest.ini_options]
addopts = "-m \"not live\" --cov=dev_src --cov=src --cov-report=term-missing"
testpaths = ["tests"]
norecursedirs = ["dev_documents", "tutorials", ".ac_cdd"]
markers = [
    "live: marks tests as requiring live APIs and external access (deselect with '-m \"not live\"')"
]

[tool.mypy]
disallow_untyped_decorators = false
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
